#65733: EJB Classes aren't on test classpath